navigatio_bar_adjusted

--- a/templates/expected_phrase.html
+++ b/templates/expected_phrase.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enter Expected Phrase</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
 </head>
 <body>
     <header>
@@ -21,6 +22,7 @@
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/worksheet">Worksheet</a></li>
+                <li><a href="/upload">Upload</a></li>
                 <li><a href="/report">Report</a></li>
             </ul>
         </nav>
