--- a/templates/report.html
+++ b/templates/report.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
     <style>
-        body {
+        /* body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             color: #333;
@@ -24,16 +25,16 @@
         }
         .text-image-container img {
             height: 30px;
-        }
+        } */
         
-        .content {
+        /* .content {
             max-width: 800px;
             margin: 40px auto;
             padding: 20px;
             background-color: #0077b2;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-        }
+        } */
         h2, h3 {
             color: #2c3e50;
         }
@@ -65,6 +66,7 @@
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/worksheet">Worksheet</a></li>
+                <li><a href="/upload">Upload</a></li>
                 <li><a href="/report">Report</a></li>
             </ul>
         </nav>
