--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Video</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='update_style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
 </head>
 <body>
     <header>
@@ -15,29 +17,26 @@
         </div>
         <div class="text-image-container">
             <img src="{{ url_for('static', filename='images/1.png') }}" alt="title">
-
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/worksheet">Worksheet</a></li>
+                <li><a href="/upload">Upload</a></li>
                 <li><a href="/report">Report</a></li>
             </ul>
         </nav>
     </header>
 
-
     <main>
         <div class="content">
             <h2>Upload Video</h2>
             <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
-            <label for="file">Choose a video file:</label>
-            <input type="file" name="file" id="file" accept="video/*">
-            <button type="submit">Upload</button>
-        </form>
+                <label for="file">Choose a video file:</label>
+                <input type="file" name="file" id="file" accept="video/*">
+                <button type="submit">Upload</button>
+            </form>
         </div>
     </main>
-
-
 </body>
 </html>
