--- a/templates/report.html
+++ b/templates/report.html
@@ -350,23 +350,23 @@
                         </li>
                     {% endfor %}
                 </ul>
-                <h3>Phoneme-level Analysis:</h3>
-                <ul>
+                <!-- <h3>Phoneme-level Analysis:</h3> -->
+                <!-- <ul>
                     {% for phoneme in results['phoneme_analysis'] %}
                         <li>
                             <strong>Phoneme:</strong> {{ phoneme['phoneme'] }} (from word '{{ phoneme['word'] }}')<br>
                             <strong>Analysis:</strong> {{ phoneme['feedback'] }}
                             {% if phoneme['audio_file'] %}
                                 <audio controls>
-                                    <!-- <source src="{{ url_for('static', filename='audio/' + phoneme['audio_file'].split('/')[-1]) }}" -->
+                                     <source src="{{ url_for('static', filename='audio/' + phoneme['audio_file'].split('/')[-1]) }}" 
                                     <source src="{{ url_for('static', filename='audio/' + phoneme['audio_file'].split('/')[-1]) }}" type="audio/wav">
-                                    <!-- type="audio/wav"> -->
+                                    type="audio/wav"> 
                                     Your browser does not support the audio element.
                                 </audio>
                             {% endif %}
                         </li>
                     {% endfor %}
-                </ul>
+                </ul> -->
                 <h3>Suggestions for Improvement:</h3>
                 <ul>
                     {% for suggestion in results['suggestions'] %}
