--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -40,22 +40,21 @@
 
         <!-- Update analyze.html -->
 
-<h3>Phoneme-level Analysis</h3>
-<ul>
-    {% for item in results['phoneme_analysis'] %}
-        <li>
-            <strong>Phoneme:</strong> {{ item['phoneme'] }} (from word '{{ item['word'] }}')<br>
-            <strong>Analysis:</strong> {{ item['feedback'] }}
-            {% if item['audio_file'] %}
-                <audio controls>
-                    <source src="{{ url_for('static', filename='audio/' + item['audio_file']) }}" type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
-            {% endif %}
-        </li>
-    {% endfor %}
-</ul>
-
+        <h3>Phoneme-level Analysis:</h3>
+        <ul>
+            {% for phoneme in results['phoneme_analysis'] %}
+                <li>
+                    <strong>Phoneme:</strong> {{ phoneme['phoneme'] }} (from word '{{ phoneme['word'] }}')<br>
+                    <strong>Analysis:</strong> {{ phoneme['feedback'] }}
+                    {% if phoneme['audio_file'] %}
+                        <audio controls>
+                            <source src="{{ url_for('serve_audio', filename=phoneme['audio_file'].split('/')[-1]) }}" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    {% endif %}
+                </li>
+            {% endfor %}
+        </ul>
         
         <form action="{{ url_for('report') }}">
             <button type="submit">Show Report</button>
